Animations now bound to world tick instead of fps. Now respect easing type